# vk-renderer

./: .gitignore  CMakeLists.txt  README  default.nix  guix-manifest.scm  guix.scm  shell.nix  vk-test-app.nix
models/: 2cubes.gltf  test-sq-sphere.glb  test.glb  test2.glb
shaders/: gradient.comp  ray-tracer.comp  ray-tracer.comp.glsl  ray-tracer.comp.spv
src/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  renderer.hpp  window_handles.cpp  window_handles.h  window_handles.hpp  window_handles_header.h
